# libfprint

./: .gitignore  .gitlab-ci.yml  NEWS  enrolled.pgm  meson.build  meson_options.txt  test-driver.c  test-driver.h  test-storage.variant  verify.pgm  vfs0090.c  vfs0090.h
.gitlab-ci/: libfprint-image-variables.yaml
cocci/: 02-type-renames.cocci  apply-all
data/: autosuspend.hwdb
debian/: changelog  control  gbp.conf  libfprint-2-2.install  libfprint-2-2.postinst  libfprint-2-2.postinst.in  libfprint-2-tod1.symbols  rules  update-udev-triggers.sh
debian/patches/: Drop-version-from-libfprint-hwdb.patch  Generate-a-hwdb-instead-of-udev-rules.patch  build-Ensure-we-process-the-data-dir.patch  build-Explicitly-mark-libfprint-as-a-shared-library.patch  data-Keep-using-versioned-libname-for-hwdb-file.patch  data-Use-auto-generated-but-hardcoded-autosuspend-hwdb-fi.patch  fp-print-Don-t-byte-swap-two-times-the-NBIS-array-content.patch  fpi-device-Return-proper-type-on-identification-success.patch  image-device-Don-t-deactivate-if-deactivation-was-already.patch  meson-Always-build-hwdb-file.patch  series  (+12 more)
demo/: gtk-libfprint-test.c  meson.build  org.freedesktop.libfprint.Demo.json
elan/: elan_pri.c  elan_pri.h  libfprint-meson.build  meson.build
examples/: clear-storage.c  cpp-test  enroll.c  img_capture_continuous.c  manage-prints.c  meson.build  sendvirtcmd.py  storage.c  storage.h  tod-inspector.c  verify.c
libfprint/: async.c  drivers_api.h  drv.c  fp-context.c  fp-device-private.h  fp-device.c  fp-device.h  fp-image-device-private.h  fp-image-device.c  fp-image.c  fp-print-private.h  fp-print.c  fpi-assembling.c  fpi-assembling.h  fpi-compat.h  fpi-core.c  fpi-device.c  fpi-device.h  fpi-image-device.c  fpi-image-device.h  fpi-image.c  fpi-image.h  fpi-print.c  fpi-print.h  fpi-ssm.c  fprint-list-supported-devices.c  fprint-list-udev-hwdb.c  imgdev.c  libfprint-drivers.map  libfprint-private.ver  meson.build  sync.c
scripts/: uncrustify.cfg  uncrustify.sh
tests/: README.md  convert-ioctl.py  create-driver-test.py.in  create-misc-driver-test.py.in  libfprint.supp  meson.build  storage-device.py  test-device-fake.c  test-fp-context.c  test-fp-todv1-types.c  test-fpi-device.c  test-utils.c  test-utils.h  umockdev-test.py  virtual-device.py
(+75 files in other folders)
