option('drivers',
       description: 'Drivers to integrate, "default" selects the default set, "all" selects all drivers',
       type: 'string',
       value: 'default')
option('introspection',
       description: 'Build GObject Introspection repository',
       type: 'boolean',
       value: true)
option('udev_rules',
       description: 'Whether to create and install udev rules (auto: turn on when needed by a driver)',
       type: 'feature',
       value: 'auto')
option('udev_rules_dir',
       description: 'Installation path for udev rules',
       type: 'string',
       value: 'auto')
option('udev_rules_cmd',
       description : 'Optional path for native build of fprint-list-udev-rules',
       type : 'string',
       value : '')
option('udev_hwdb',
       description: 'Whether to create a udev hwdb for autosuspend (included in systemd v248 and later)',
       type: 'feature',
       value: 'auto')
option('udev_hwdb_dir',
       description: 'Installation path for udev hwdb',
       type: 'string',
       value: 'auto')
option('udev_hwdb_cmd',
       description : 'Optional path for native build of fprint-list-udev-hwdb',
       type : 'string',
       value : '')
option('gtk-examples',
       description: 'Whether to build GTK+ example applications',
       type: 'boolean',
       value: false)
option('doc',
       description: 'Whether to build the API documentation',
       type: 'boolean',
       value: true)
option('tests',
       description: 'Whether to build the tests',
       type: 'boolean',
       value: true)
